# tony_tesla

./: .gitignore  .pre-commit-config.yaml  .prettierignore  CLAUDE.md  CONVENTIONS.md  Pipfile  README.md  blog_server.py  bus.py  bus_tools.md  cache.py  calls.py  fortune_mcp_server.py  journal_cleanup.convo.md  justfile  models.py  pyproject.toml  shared.py  storage.py  test_cache.py  test_calls.py  tony.py  tony_search.hold.json  tony_server.py
.github/workflows/: python-tests.yml
chop-logs/: update-model-configuration-to-sonar-pro.md
cursor-logs/: coding-conventions-and-project-rules.md
mcp-blog-server/: .env.example  README.md  blog_mcp_server.py  mcp.json  pyproject.toml  requirements.txt  run_tests.sh  test_blog_mcp_e2e.py
modal_readonly/: tony_assistant_spec.json  tony_system_prompt.md
modal_readonly/transit/: 48_stops.txt  routes.txt  stops.txt
test-results/python/: badge-coverage.json  badge-integration.json  badge-stats.json  badge-status.json  badge-unit.json  integration-results.json  unit-results.json
tests/: conftest.py
tests/e2e/: test_blog_server.py  test_tony_server.py
tests/integration/: conftest.py  test_blog_handler.py  test_tony_server.py
tests/unit/: conftest.py  test_blog_server.py  test_fortune_mcp_server.py  test_tony_server.py
zz-chop-logs/: 2025-05-24_21-52-review-and-apply-dev-setup-files.md
