[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tony_tesla"
version = "0.1.0"
description = "A short description of your project"
authors = [
    { name="Your Name", email="your.email@example.com" }
]
license = { text = "MIT" }
readme = "README.md"
dependencies = [
    "icecream",
    "rich",
    "pydantic",
    "loguru",
    "langchain",
    "langchain-openai",
    "httpx",
    "fastapi",
    "azure-cosmos",
    "typer",
    "requests",
    "python-dateutil",
    "pathlib",
    "onebusaway",
    "modal",
    "textual>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "textual-dev",
    "pytest-timeout",
    "pytest-xdist"
]

[tool.setuptools]
py-modules = ["tony", "storage", "bus", "blog_server", "tony_server"]

[project.scripts]
storage = "storage:app"
tony = "tony:app"
bus = "bus:app"

[tool.pytest.ini_options]
testpaths = [
    "tests/unit",
    "tests/integration",
    "tests/e2e"
]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
timeout = 300  # 5 minutes timeout for tests
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "pass",
]
